Fix: Moved 'Sunburst' img back to default alignment

--- a/style.css
+++ b/style.css
@@ -73,8 +73,6 @@ h4 {
 
 .SunBurst img {
     display: block;
-    margin: 0 auto 20px;
-    /* Center the image and add space below */
 }
 
 .event-grid {
